--- a/nba/css/style.css
+++ b/nba/css/style.css
@@ -49,10 +49,8 @@ html,body{
     display: none;
     width: 100%;
     height: 100%;
-    position: absolute;
-
 }
-.container .m-imgs img:nth-of-type(1){
+.container .m-imgs img:first-child{
     display: block;
 }
 .container .m-nav{
